# python-training-kkm

./: .env  .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: auth.py  config.py  dependencies.py  exceptions.py  main.py
app/crud/: item.py
app/models/: item.py
app/routers/: item.py
app/schemas/: chat.py  item.py
models/: addition.py  show.py
module1_ollama_basics/: .env.example  01_basic_generate.py  02_temperature_experiment.py  03_embeddings.py  04_prompt_library.py  README.md  pyproject.toml
module1_ollama_basics/data/: sample_questions.txt
module2_fastapi_foundations/: .env.example  README.md  main.py  pyproject.toml  schemas.py
module2_fastapi_foundations/routers/: basic.py
module3_fastapi_ollama/: .env.example  README.md  main.py  ollama_client.py  pyproject.toml  schemas.py
module3_fastapi_ollama/data/: test_prompts.txt
module3_fastapi_ollama/routers/: generate.py
module4_document_ingestion/: .env.example  README.md  main.py  pyproject.toml  schemas.py
module4_document_ingestion/data/: hr_code_of_conduct.txt
module4_document_ingestion/routers/: ingest.py
module5_rag_pipeline/: .env.example  README.md  ingestor.py  main.py  pyproject.toml  rag_engine.py  schemas.py
module6_chat_memory/: README.md  main.py  pyproject.toml  schemas.py
module6_chat_memory/data/: hr_leave_policy.txt
module6_chat_memory/data/index/: docstore.json  index_store.json  vector_store.json
module7_evaluation/: .env.example  README.md  evaluator.py  main.py  pyproject.toml  schemas.py
module7_evaluation/data/: eval_questions.json  it_security_policy.txt
module7_evaluation/routers/: eval.py  ingest.py  query.py
module8_docker/: .dockerignore  .env.example  Dockerfile  README.md  chat_manager.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
module8_docker/routers/: chat.py
module9_guardrails/: 01_input_guardrail.py  02_output_guardrail.py  03_llm_as_judge_guardrail.py  04_input_pii_redaction.py  README.md  pyproject.toml
