[project]
name = "fastapi-crud"
version = "1.0.0"
description = "FastAPI CRUD Training Project with SQLAlchemy, MySQL, Alembic migrations, JWT authentication"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "alembic",
    "pydantic-settings",
    "python-dotenv",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
