[project]
name = "module9-guardrails"
version = "0.1.0"
description = "AI Guardrails module for FastAPI and Ollama"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
